Project Website/dev/scss/style.scss
@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600&family=Source+Serif+Pro:wght@400;600&display=swap");

:root {
	
	--font-body: "Source Sans Pro";
	--font-serif: "Source Serif Pro";

	--font-weight-thin: 300;
	--font-weight-normal: 400;
	--font-weight-sb: 600;

	--color-body-bg: #ffffff;
	--color-body-bg-rgb: 255, 255, 255;	
	--color-body-text: #181818;
	--color-body-bg-rgb: 255, 255, 255;
	--color-black: #000000;
	--color-black-rgb: 0, 0, 0;

	--grey-100: #f0f0f0;
	--grey-150: #f9f9f9;
	--grey-200: #ececec;
	--grey-300: #999999;
	--grey-400: #666666;
	--grey-500: #2c2c2c;

	--spacing-6: 6px;
	--spacing-8: 8px;
	--spacing-12: 12px;
	--spacing-24: 24px;
	--spacing-48: 48px;
	--spacing-96: 96px;
	--padding-section: var(--spacing-48) var(--spacing-24);

	--font-size-xl: 48px;
	--font-size-lg: 24px;
	--font-size-normal: 16px;
	--font-size-sm: 14px;

}

h1:not(:empty),
h2:not(:empty),
h3:not(:empty),
.h1:not(:empty),
.h2:not(:empty),
.h3:not(:empty) {
	font-family: var(--font-body);
	font-weight: var(--font-weight-sb);
	font-style: normal;
	line-height: 125%;
}

h1:not(:empty),
.h1:not(:empty) {
	font-size: var(--font-size-xl);
}

h2:not(:empty),
.h2:not(:empty) {
	font-size: var(--font-size-lg);
	margin-bottom: var(--spacing-12);
}

h3:not(:empty),
.h3:not(:empty) {
	font-size: var(--font-size-normal);
}

html {
	scroll-behavior: smooth;
	line-height: 1.25;
	-webkit-text-size-adjust: 100%;
}

body {
	width: 100%;
	min-height: 100dvh;
	min-height: 100vh;
	overflow-x: hidden;
	margin: 0;
	padding: 0;
	color: var(--color-body-text);
	background-color: var(--color-body-bg);
	font-family: var(--font-body);
	font-weight: var(--font-weight-normal);
	font-size: var(--font-size-normal);
	line-height: 1.25;
}

*,
*::before,
*::after {
	box-sizing: border-box;
	margin: 0;
}

* {
	margin: 0;
	padding: 0;
	font: inherit;
}

img,
picture,
video {
	display: block;
	max-width: 100%;
	border-style: none;
}

svg {
	width: 20px;
	aspect-ratio: 1;
}

hr {
	border: none;
	width: 100%;
	height: 1px;
	background-color: var(--grey-200);
}

a:not(.button) {
	color: var(--color-black);
	text-decoration: underline;
}

a.button {
	text-decoration: none;
}

.bold {
	font-weight: var(--font-weight-sb);
}

// CONTAINER

.container {
	width: 100%;
	max-width: 498px;
	margin-inline: auto;

	//   @media (min-width: 688px) {
	//     max-width: 996px;
	//   }

	@media (min-width: 1242px) {
		max-width: 1494px;
	}

	//   @media (min-width: 1640px) {
	//     max-width: 1992px;
	//   }

	//   @media (min-width: 2038px) {
	//     max-width: 2490px;
	//   }
}

// BUTTONS

.buttons {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-wrap: wrap;
	gap: var(--spacing-12);	
}

.button {
	padding-inline: var(--spacing-24);
	height: 44px;
	border-width: 1px;
	border-style: solid;
	box-sizing: border-box;
	border-radius: 50px;
	cursor: pointer;
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: center;
	font-family: var(--font-body);
	font-weight: 600;
	font-size: var(--font-size-normal);
	transition: border-color 0.2s, background-color 0.2s, color 0.2s;
	white-space: nowrap;

	&:disabled {
		cursor: not-allowed;
	}

	.wrapper {
		width: 20px;
		height: 20px;
		margin-right: var(--spacing-6);
	}

	&.primary {
		color: var(--color-body-bg);
		border-color: var(--color-body-text);
		background-color: var(--color-body-text);

		& :global(svg) {
			fill: var(--color-body-bg);
		}

		&:disabled {
			background-color: var(--grey-200);
			border-color: var(--grey-200);
			color: var(--color-body-bg);
		}

		&:active:not(:disabled),
		&:hover:not(:disabled) {
			border-color: var(--color-black);
			background-color: var(--color-black);
			transition: border-color 0.2s, background-color 0.2s;
		}

		@media (prefers-color-scheme: dark) {
			&:disabled {
				background-color: var(--grey-200);
				color: var(--color-body-bg);

				& :global(svg) {
					fill: var(--color-body-bg);
				}
			}

			&:active:not(:disabled),
			&:hover:not(:disabled) {
				transition: border-color 0.2s, background-color 0.2s;
			}
		}
	}

	&.secondary {
		background-color: transparent;
		border-color: var(--color-body-text);
		color: var(--color-body-text);

		& :global(svg) {
			fill: var(--color-body-text);
		}

		&:disabled {
			color: var(--grey-200);

			& :global(svg) {
				fill: var(--grey-200);
			}
		}

		&:active:not(:disabled),
		&:hover:not(:disabled) {
			background-color: var(--grey-150);
			transition: border-color 0.2s, background-color 0.2s;
		}

		@media (prefers-color-scheme: dark) {
			background-color: var(--color-body-bg);
			border-color: var(--color-body-text);
			color: var(--color-body-text);

			& :global(svg) {
				fill: var(--color-body-text);
			}

			&:disabled {
				background-color: var(--color-body-bg);
				color: var(--grey-500);

				& :global(svg) {
					fill: var(--grey-500);
				}
			}

			&:active:not(:disabled),
			&:hover:not(:disabled) {
				transition: border-color 0.2s, background-color 0.2s;
			}
		}
	}
}

section,
footer {
	padding: var(--padding-section);
	display: flex;
	gap: var(--spacing-48);
	flex-direction: column;

	.section-header {
		margin-bottom: 48px;
	}

	&#trynow {
		.buttons {
			margin-top: 36px;
		}
	}
}

.cols {
	display: flex;
	flex-direction: column;
	flex-wrap: nowrap;
	gap: var(--spacing-48);
	max-width: 450px;
	margin-inline: auto;
}

.col {
	display: flex;
	flex-direction: column;
	gap: var(--spacing-12);
	flex-basis: 100%;
	max-width: 450px;

	.buttons {
		justify-content: flex-start;
	}
}

.subtitle {
	font-size: 20px;
}

.hero {
	color: var(--color-body-bg);
	background-color: var(--grey-300);
	//   background-image: url("../imgs/hero_medline.png");
	//   background-size: contain;
	//   background-position: center right var(--spacing-48);
	//   background-repeat: no-repeat;
	display: flex;
	flex-direction: column;

	.container {
		max-width: 100%;

		.content {
			display: flex;
			align-items: center;
			justify-content: space-between;
			flex-direction: column;
			gap: var(--spacing-48);

			@media (min-width: 1242px) {
				flex-direction: row;
			}

			.text {
				display: flex;
				flex-direction: column;
				gap: var(--spacing-8);
				max-width: 508px;
				order: 2;
				text-align: center;

				h1 {
					span {
						font-family: var(--font-serif);
						font-style: italic;
					}
				}

				p {
					font-size: 24px;
				}

				.buttons {
					justify-content: center;
					margin-top: var(--spacing-48);

					.button {
						&.primary {
							background-color: var(--color-body-bg);
							border-color: var(--color-body-bg);
							color: var(--color-body-text);


							&:hover {
								background-color: rgba(var(--color-body-bg-rgb), 0.8);
							}
						}

						&.secondary {
							border-color: rgba(var(--color-body-bg-rgb), 0.5);
							color: var(--color-body-bg);

							&:hover {
								background-color: rgba(var(--color-black-rgb), 0.2);
							}
						}
					}
				}
			}

			.img {
				order: 1;

				img {
					max-height: 508px;
				}
			}
		}
	}
}

#swiper {
	position: relative;
	height: 100%;
	background: linear-gradient(to bottom, #fff, #ececec 98%);
	margin: 0;
	padding: 0;
	text-align: center;
	padding-bottom: var(--spacing-96);

	h2 {
		padding-top: var(--spacing-96);
		padding-bottom: var(--spacing-48);
	}

	h3 {
		padding-top: var(--spacing-24);
		padding-bottom: var(--spacing-12);
	}

	h3,
	p,
	.buttons {
		opacity: 0;
		transition: opacity 0.5s;
	}

	.buttons {
		display: none;
	}

	.button {
		margin-block: var(--spacing-24);
	}

	.swiper {
		width: 100%;
	}


	.swiper-slide {
		background-position: center;
		background-size: cover;
		width: 65%;
		max-width: 450px;

		h3 {
			font-size: var(--font-size-lg);
		}

		&.swiper-slide-active {

			h3,
			p,
			.buttons {
				opacity: 1;
				transition: opacity 0.5s;
			}
		}

		img {
			display: block;
			width: 100%;
			aspect-ratio: 1;
		}

		.swiper-slide-shadow,
		.swiper-slide-shadow-bottom,
		.swiper-slide-shadow-left,
		.swiper-slide-shadow-right,
		.swiper-slide-shadow-top {
			aspect-ratio: 1;
			height: auto;
		}
	}
}

.intro {
	max-width: 750px; 

	span {
		font-family: var(--font-serif);
		font-style: italic;
	}
}

footer {
	background-color: var(--color-body-text);
	color: var(--color-body-bg);
	font-weight: var(--font-weight-thin);

	.buttons {
		margin-top: var(--spacing-12);
		margin-bottom: var(--spacing-48);

		.button {
			color: var(--color-body-bg);
			font-size: var(--font-size-sm);

			&.secondary {
				color: var(--color-body-bg);
				border-color: var(--grey-400);


				&:hover {
					background-color: rgba(var(--color-body-bg-rgb), 0.2);
				}
			}
		}
	}

	.copyright {
		color: var(--grey-400);
	}

	svg {
		fill: var(--color-body-bg);
	}
}

#trynow,
footer {
	text-align: center;

	.col {
		max-width: 450px;
		margin-inline: auto;

		.buttons {
			justify-content: center;
		}
	}
}

@media (min-width: 398px) {
	:root {
		--font-size-xl: 60px;
		--font-size-lg: 30px;
		--font-size-normal: 18px;
		--font-size-sm: 16px;
		--padding-section: var(--spacing-96) var(--spacing-48);
	}

	.subtitle {
		font-size: 24px;
	}

	footer {
		padding-block: var(--spacing-48);
	}
}

@media (min-width: 668px) {

	h1:not(:empty),
	.h1:not(:empty) {
		font-size: var(--font-size-xl);
	}

	h2:not(:empty),
	.h2:not(:empty) {
		font-size: var(--font-size-lg);
		margin-bottom: var(--spacing-12);
	}

	h3:not(:empty),
	.h3:not(:empty) {
		font-size: var(--font-size-normal);
	}

	.hero {

		.content {
			p {
				font-size: 30px;
			}
		}
	}

	#swiper {
		h2 {
			padding-top: var(--spacing-96);
			padding-bottom: var(--spacing-48);
		}

		h3 {
			padding-top: var(--spacing-24);
			padding-bottom: var(--spacing-12);
		}

		.button {
			margin-block: var(--spacing-24);
		}

		.swiper-slide {
			width: 450px;
		}
	}

	section {
		.buttons {
			margin-top: var(--spacing-48);
		}
	}

	footer {
		padding: var(--spacing-48);
	}
}

@media (min-width: 1242px) {

	.hero {
		.container {
			.content {
				.text {
					text-align: left;
					order: 1;

					.buttons {
						justify-content: flex-start;
					}
				}

				.img {
					order: 2;
				}
			}
		}
	}

	.cols {
		flex-direction: row;
		max-width: 100%;
	}

	#trynow,
	footer {
		text-align: left;

		.col {
			margin-left: 0;

			.buttons {
				justify-content: flex-start;
			}
		}
	}
}

